--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,3 +1,10 @@
 jdbc.url=jdbc:mysql://localhost:3306/carsystem?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 jdbc.username=root
 jdbc.password=123456
+
+spring.mail.protocol=smtps
+spring.mail.port=465
+spring.mail.host=smtp.qq.com
+spring.mail.username=1532283026@qq.com
+spring.mail.password=jmrdualaqypkijda
+spring.mail.default-encoding=utf-8
