--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,36 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.12.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>de.vinado.boot</groupId>
+            <artifactId>spring-boot-autoconfigure-dkim-javamail</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>de.vinado.spring</groupId>
+            <artifactId>dkim-javamail</artifactId>
+            <version>1.2.2</version>
+        </dependency>
     </dependencies>
 
 
