--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,7 @@
         <welcome-file>/WEB-INF/pages/index.jsp</welcome-file>
     </welcome-file-list>
 
+    <!--字符编码过滤器-->
     <filter>
         <filter-name>CharacterEncoding</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -41,5 +42,4 @@
         <filter-name>CharacterEncoding</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
 </web-app>
