--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,6 +5,6 @@ jdbc.password=123456
 spring.mail.protocol=smtps
 spring.mail.port=465
 spring.mail.host=smtp.qq.com
-spring.mail.username=1532283026@qq.com
-spring.mail.password=qfigjwwlyfflbaaj
+spring.mail.username=
+spring.mail.password=
 spring.mail.default-encoding=utf-8
