--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -4,7 +4,8 @@ jdbc.password=123456
 
 spring.mail.protocol=smtps
 spring.mail.port=465
-spring.mail.host=smtp.qq.com
-spring.mail.username=1532283026@qq.com
-spring.mail.password=qfigjwwlyfflbaaj
+spring.mail.host=smtp.163.com
+spring.mail.username=13667948102@163.com
+spring.mail.password=TINQYDGKUCZZVPDE
 spring.mail.default-encoding=utf-8
+
