--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -4,7 +4,7 @@ jdbc.password=123456
 
 spring.mail.protocol=smtps
 spring.mail.port=465
-spring.mail.host=smtp.qq.com
+spring.mail.host=
 spring.mail.username=
 spring.mail.password=
 spring.mail.default-encoding=utf-8
